Upgrade AWS SDK to v2